# Makefile.am - use automake to generate Makefile.in
#
# Copyright (C) 2010, 2011 Arthur de Jong
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
# 02110-1301 USA

pynslcddir = $(datadir)/pynslcd

pynslcd_PYTHON = pynslcd.py cfg.py common.py tio.py mypidfile.py \
                 alias.py ether.py group.py pam.py passwd.py shadow.py
nodist_pynslcd_PYTHON = constants.py config.py
CLEANFILES = $(nodist_pynslcd_PYTHON)

all-local: $(nodist_pynslcd_PYTHON)

# create a symbolic link for the pynslcd daemon and fix permissions
install-data-hook:
	chmod a+rx $(DESTDIR)$(pynslcddir)/pynslcd.py
	$(MKDIR_P) $(DESTDIR)$(sbindir)
	[ -L $(DESTDIR)$(sbindir)/pynslcd ] || $(LN_S) $(pynslcddir)/pynslcd.py $(DESTDIR)$(sbindir)/pynslcd

# generate constants module
constants.py: $(top_srcdir)/nslcd.h Makefile
	( echo "# This file is automatically generated from nslcd.h." ; \
	  echo "# See that file for details." ; \
	  echo "" ; \
	  sed -n 's| */\*.*\*/ *||;s/^.define  *\(NSLCD_[A-Z_]*\)  */\1 = /p' \
	      $< ) > $@
